test comments index page

--- a/app/views/comments/index.haml
+++ b/app/views/comments/index.haml
@@ -1,6 +1,9 @@
 %ul
 	-@comment.each do |comment|
+		- user = User.find(comment.user_id)
 		%li
+			= user.first_name
+			|
 			= comment.title
 			|
 			= comment.body
