--- a/app/views/dashboards/dashboard.haml
+++ b/app/views/dashboards/dashboard.haml
@@ -1,4 +1,10 @@
 #container
+	.row-fluid
+		.span12
+			.item
+				.content-box
+					%h3 I am a UNSW student studying commerce & want a job in marketing. I need to intern this year. mpppp
+
 	.item
 		.info-box-light-orange
 			.center-alignment
