--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -944,3 +944,25 @@ h3 {
 .pad-top-tiny{
 	padding-top:15px;
 }
+
+
+.content-box{
+	text-align:center;
+	max-width: 1120px;
+	border:1px solid $light-grey;
+	border-top: 10px solid $light-teal;
+//	border:0px !important;
+	border-radius: 4px;
+	//background-color:$light-teal;
+	padding:10px;
+	margin-top:15px;
+	color:$text-grey;
+	line-height:16px;
+	font-size:12px;
+	h5{
+		color:$aqua;
+	}
+	img {
+		max-width:100px;
+	}
+}
