--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -6,7 +6,7 @@
 		.span12
 			.comment-writing
 				%h5
-					=comment.user.first_name
+					-#comment.user.first_name
 					&nbsp &nbsp
 					%small= comment.updated_at.localtime.strftime("%d %b %I:%M %P")
 					- if (comment.user.id == current_user.id || current_user.role == "admin")
