--- a/app/views/staticpages/home.haml
+++ b/app/views/staticpages/home.haml
@@ -18,6 +18,7 @@
 							.account-button
 								Login
 			.row-fluid
+				.dashboard
 				.offset1.span10
 					#container
 						- @comments.each do |comment|
@@ -25,6 +26,8 @@
 							.item
 								- if comment.subject == "Interview Review"
 									.info-box-light-teal
+										.center-alignment
+											= image_tag(comment_company.logo.url)
 										= comment_company.name
 										\- 
 										= comment.subject
@@ -32,6 +35,8 @@
 
 								- elsif comment.subject == "Salary Review"
 									.info-box-light-orange
+										.center-alignment
+											= image_tag(comment_company.logo.url)
 										= comment_company.name
 										\-
 										=comment.subject
@@ -41,6 +46,8 @@
 											"
 								-elsif comment.subject == "Company Review"
 									.info-box-yellow
+										.center-alignment
+											= image_tag(comment_company.logo.url)
 										= comment_company.name
 										\-
 										=comment.subject
