--- a/app/views/staticpages/home.haml
+++ b/app/views/staticpages/home.haml
@@ -6,7 +6,7 @@
 		.container
 			.row-fluid
 				.offset3.span6
-					.center-alignment
+					.center-alignment.home-logo
 						= link_to image_tag('white-logo.png'), root_path 
 						.home-page-text
 							Your infinite leg-up network.
