--- a/app/views/staticpages/home.haml
+++ b/app/views/staticpages/home.haml
@@ -58,5 +58,11 @@
 										\-
 										=comment.subject
 										%h5= comment.body
+						=link_to new_user_registration_path do
+							.item
+								.info-box-full-yellow
+									.center-alignment
+										%h5 Sign up to see more
+				
 								
 		
