--- a/app/views/staticpages/home.haml
+++ b/app/views/staticpages/home.haml
@@ -16,6 +16,7 @@
 							%br
 							%br
 							Already have an account? 
+							&nbsp
 							=link_to "Log in now", new_user_session_path 
 
 			.row-fluid
@@ -63,7 +64,7 @@
 							.item
 								.info-box-full-yellow
 									.center-alignment
-										%h5 Sign up to see more
+										%h5 Sign up to see more advice
 				
 								
 		
