--- a/app/views/companies/index.haml
+++ b/app/views/companies/index.haml
@@ -14,5 +14,5 @@
 				%i(class="icon-briefcase")
 				Go to company website
 				%br				
-				=image_tag('whirlpool-logo.png', size: "15x15") 
-				Go to Whirlpool Forum
+				- #image_tag('whirlpool-logo.png', size: "15x15") 
+				- #Go to Whirlpool Forum
