--- a/app/views/companies/index.haml
+++ b/app/views/companies/index.haml
@@ -9,10 +9,11 @@
 						%h5= link_to company.name, company
 				=company.industry
 				%br
-				=company.info
+				-#company.info
 				%br
-				%i(class="icon-briefcase")
-				Go to company website
+				=link_to company.website do
+					%i(class="icon-briefcase")
+					Go to company website
 				%br				
 				- #image_tag('whirlpool-logo.png', size: "15x15") 
 				- #Go to Whirlpool Forum
