--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1005,3 +1005,21 @@ h3 {
 .icon-fix{
 	padding-top:3px;
 }
+
+.comment-part-one{
+	height:100%;
+	float:left;
+}
+
+.comment-part-two{
+
+}
+
+.vote{
+	margin-top:15px;
+
+}
+
+.vote-item{
+	padding:0px 3px;
+}
