--- a/app/views/comments/_vote.haml
+++ b/app/views/comments/_vote.haml
@@ -1,2 +1,3 @@
-=link_to raw("<i class=\"icon-arrow-up\"></i>"), {:controller =>"comments", :action => "upvote", :id => comment.id},method: :put, :remote => true
-=link_to raw("<i class=\"icon-arrow-down\"></i>"), {:controller =>"comments", :action => "downvote", :id => comment.id},method: :put, :remote => true
+=link_to raw("<i class=\"icon-arrow-up\"></i>"), {:controller =>"comments", :action => "upvote", :id => comment.id}, method: :put, :remote => true
+= content_tag(:div, comment.upvotes.size - comment.downvotes.size, :id => "vote-#{comment.id}", :class => "vote-item")
+=link_to raw("<i class=\"icon-arrow-down\"></i>"), {:controller =>"comments", :action => "downvote", :id => comment.id}, method: :put, :remote => true
