--- a/app/views/dashboards/dashboard.haml
+++ b/app/views/dashboards/dashboard.haml
@@ -48,10 +48,14 @@
 					= comment_company.name
 					\-
 					=comment.subject
-					%h5= comment.body
-					= content_tag(:p, comment.upvotes.size - comment.downvotes.size, :id => "vote-#{comment.id}")
-					= render partial: 'comments/vote', locals: { comment: comment }	
-					
+					.row-fluid
+						.span10
+							%h5= comment.body
+							=current_user.voted_as_when_voted_for comment
+						.offset1.span1.vote
+							= render partial: 'comments/vote', locals: { comment: comment }	
+							
+
 
 	- @company.each do |company|
 		.item
