fixed upvote downvote issues

--- a/app/views/comments/downvote.js.erb
+++ b/app/views/comments/downvote.js.erb
@@ -1,4 +1,4 @@
-<% if current_user.voted_as_when_voted_for(@comment) %>
+<% if current_user.voted_for?(@comment) %>
 	$("#vote-<%= @comment.id %>").html(function(i, val) { return +val-2 });
 <% else %>
 	$("#vote-<%= @comment.id %>").html(function(i, val) { return +val-1 });
