updated emails, intializers and environments for new name

--- a/app/views/devise/mailer/invitation_instructions.html.erb
+++ b/app/views/devise/mailer/invitation_instructions.html.erb
@@ -1,5 +1,5 @@
 <html>
-<head><title>Welcome to #######!</title></head>
+<head><title>Welcome to DemPoints!</title></head>
 <body leftmargin="0" marginwidth="0" topmargin="0" marginheight="0" offset="0" bgcolor='#ffffff' >
 
 
@@ -32,7 +32,7 @@ h2{color:#fff;background:#0090ca;font-size:12pt;line-height:100%;margin:0 0 .5em
 
 <h1> <p>Hi <%= @resource.email %> </h1>
 
-<p><%= User.find_by_id(@resource.invited_by_id).first_name %> (<%= User.find_by_id(@resource.invited_by_id).email%>) has invited you to #New Company Name, the best destination for graduate and internship advice on the internet. <p>
+<p><%= User.find_by_id(@resource.invited_by_id).first_name %> (<%= User.find_by_id(@resource.invited_by_id).email%>) has invited you to DemPoints, the best destination for graduate and internship advice on the internet. <p>
 
 <p>You can accept it through the link below.</p>
 
@@ -44,7 +44,7 @@ h2{color:#fff;background:#0090ca;font-size:12pt;line-height:100%;margin:0 0 .5em
 
 <p style="text-align:justify">
 
-The Team at #####
+The Team at DemPoints
 
 
 
