--- a/app/views/user_mailer/signup_confirmation.html.erb
+++ b/app/views/user_mailer/signup_confirmation.html.erb
@@ -1,5 +1,5 @@
 <html>
-<head><title>Welcome to ResQuery!</title></head>
+<head><title>Welcome to DemPoints!</title></head>
 <body leftmargin="0" marginwidth="0" topmargin="0" marginheight="0" offset="0" bgcolor='#ffffff' >
 
 
@@ -34,40 +34,22 @@ h2{color:#fff;background:#0090ca;font-size:12pt;line-height:100%;margin:0 0 .5em
 
 <p style="text-align:justify">
 
-	<h1> Welcome to ResQuery </h1>
+	<h1> Welcome to DemPoints </h1>
 
 	<h3>Hi <%= @user.first_name %>,</h3>
 </p>
 
 <p style="text-align:justify">
 	
-Welcome to ResQuery and thanks for signing up. You have joined hundreds of other students who are managing their job apps online and are committed to getting the jobs of their dreams. 
+Welcome to DemPoints and thanks for signing up. You have joined hundreds of other students who are sharing career knowledge online to get ahead. 
 </p>
 
-<p>
-	Sign into your account now <a href = "http://www.resquery.com/users/sign_in"> click here</a>
+<p> Sign into your account now <a href = "http://www.dempoints.com/users/sign_in"> click here</a><p>
 
-<p>
-</br>
-<b> Access our knowledge base </b>
-	<ul>
-		<li> <a href = "http://www.resquery.com/articles/8"> How to prepare for internship season </a></li>
-		<li> <a href = "http://www.resquery.com/articles/2"> The art of the Investment Banking Cover Letter </a> </li>
-		</ul>
-</br>
-<b>Improve your applications </b>
-<p>
-Do you want some guidance or another opinion on your resume or cover letter. <a href = "http://www.resquery.com/articles/9">Click here to find out more</a>
-</br>
-</br>
-</br>
-<p>
-Thank you for choosing to use ResQuery to manage your apps online
-<p>
 </br>
 Wishing you the best of success,
 </br>
-The Team at ResQuery
+The Team at DemPoints
 
 
 
@@ -85,9 +67,9 @@ The Team at ResQuery
 <tr>
 <td style="background-color:#ececec;border-top:10px solid #FFFFFF;" valign="top">
 <span style="font-size:10px;color:#898989;font-family:verdana;">
-Copyright &#169; ResQuery. All Rights Reserved.<br /><br />
+Copyright &#169; DemPoints. All Rights Reserved.<br /><br />
 Room 1025, Quadrangle Building, UNSW Sydney NSW 2052<br />
-Contact us at <a href="mailto:info@unswbsoc.com">team@resumequery.com<br />
+Contact us at <a href="mailto:team@dempoints.com">team@dempoints.com<br />
 
 
 </span>
