--- a/app/views/companies/show.haml
+++ b/app/views/companies/show.haml
@@ -5,7 +5,7 @@
 			%h3= @company.name
 			= Industry.find(@company.industry_id).industry
 			%br
-			= link_to "#{@company.website}", "http://#{@company.website}"
+			= link_to "Link to Company Website", url_with_protocol(@company.website)
 
 #container
 	- @company_comments.each do |comment|
