--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -8,6 +8,11 @@
 				=link_to companies_path do
 					.my-jobs-button
 						Companies
+				=link_to "test" do
+					-# NOTE!!!!!!!!!!!!!!!!!!!!
+					.my-jobs-button.hidden
+						Add a point
+				
 			.span3
 				.pull-right
 					= link_to edit_user_registration_path do
