--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 	
 	<body>
 		<!-- Hi! Hope you enjoy looking under the hood! -->
-		<!-- Our goal with resumeQuery is to help give students the opportunities that me (Pasha) and Varun had when we applied for jobs -->
+		<!-- Our goal with DemPoints is to help give students the opportunities that me (Pasha) and Varun had when we applied for jobs -->
 		<!-- We'd love your help and suggestions! Email us at team@resquery.com  -->		
 		<% if signed_in? %>
 			<%= render 'layouts/header'%>
