--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -8,8 +8,7 @@
 				=link_to companies_path do
 					.my-jobs-button
 						Companies
-				=link_to "test" do
-					-# NOTE!!!!!!!!!!!!!!!!!!!!
+				=link_to new_comment_path do
 					.my-jobs-button.hidden
 						Add a point
 				
