added new comment page and upvoted items pgae

--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -8,8 +8,12 @@
 				=link_to companies_path do
 					.my-jobs-button
 						Companies
+				=link_to upvoted_comments_path do
+					.my-jobs-button
+						Saved Cards
+						
 				=link_to new_comment_path do
-					.my-jobs-button.hidden
+					.my-jobs-button
 						Add a point
 				
 			.span3
