--- a/app/views/comments/new.haml
+++ b/app/views/comments/new.haml
@@ -1,1 +1,10 @@
-add a comment
+/_form.html.haml
+.pad-top
+	.comment-form
+		= simple_form_for @new_comment, remote: true do |f|
+			= f.input :body, input_html: {rows: '2'}, label: false, :placeholder => "Make a note about this application"
+			= f.input :title, label: false, placeholder: "I know this because ..."
+			= f.input :commentable_id, as: :hidden, value: @new_comment.commentable_id
+			= f.input :commentable_type, as: :hidden, value: @new_comment.commentable_type
+			= f.input :subject, collection: ["Interview Review", "Salary Review", "Company Review"]
+			= f.button :submit, "Add Comment", class: 'btn btn-primary'
