--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -9,11 +9,11 @@
 					.my-jobs-button
 						Companies
 				=link_to upvoted_comments_path do
-					.my-jobs-button
+					.my-jobs-button.hidden
 						Saved Cards
 						
 				=link_to new_comment_path do
-					.my-jobs-button
+					.my-jobs-button.hidden
 						Add a point
 				
 			.span3
