--- a/app/views/staticpages/home.haml
+++ b/app/views/staticpages/home.haml
@@ -35,7 +35,7 @@
 										= comment_company.name
 										\- 
 										= comment.subject
-										%h5= comment.body
+										%h5= truncate((sanitize(comment.body)), length: 240)
 
 								- elsif comment.subject == "Salary Review"
 									.info-box-light-orange
@@ -46,10 +46,7 @@
 										= comment_company.name
 										\-
 										=comment.subject
-										%h5
-											"
-											= comment.body
-											"
+										%h5= truncate((sanitize(comment.body)), length: 240)
 								-elsif comment.subject == "Company Review"
 									.info-box-yellow
 										.center-alignment
@@ -59,7 +56,7 @@
 										= comment_company.name
 										\-
 										=comment.subject
-										%h5= comment.body
+										%h5= truncate((sanitize(comment.body)), length: 240)
 						=link_to new_user_registration_path do
 							.item
 								.info-box-full-yellow
