upvoted posts simple page working

--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -9,8 +9,8 @@
 					.my-jobs-button
 						Companies
 				=link_to upvoted_comments_path do
-					.my-jobs-button.hidden
-						Saved Cards
+					.my-jobs-button
+						My Upvoted Posts
 						
 				=link_to new_comment_path do
 					.my-jobs-button.hidden
