--- a/app/views/staticpages/about.haml
+++ b/app/views/staticpages/about.haml
@@ -4,16 +4,15 @@
 	.span6
 		%h3 About us
 
-
 .row-fluid
 	.span6
 		.about-area
 			.about-text
-				%p ResumeQuery is a graduate job and internship listing website. We are comprehensive, reputable and value students first. Our promise to you is that we will never hide useful information from you or make it harder for you to find the opportunities your looking for just for us to make a profit. 
+				%p DemPoints stands for Democratising Points. 
 				%br
 				%p Our guiding principle is to give every student the opportunities we had when we applied for our internship & grad jobs.
 				%br
-				%p To do this, our website is an open and editable job listing platform, where you can save jobs to your list of apps to do. It is built to get you the job information you need as fast and in its most actionable form as possible.
+					
 	.span3
 		-#about-area
 	
