--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -1,7 +1,7 @@
 /_form.html.haml
 .pad-top
 	.comment-form
-		= simple_form_for comment, remote: true do |f|
+		= simple_form_for comment do |f|
 			= f.input :body, input_html: {rows: '2'}, label: false, :placeholder => "Make a note about this application"
 			= f.input :title, label: false, placeholder: "I know this because ..."
 			= f.input :commentable_id, as: :hidden, value: comment.commentable_id
