--- a/app/views/comments/new.haml
+++ b/app/views/comments/new.haml
@@ -1,10 +1,30 @@
 /_form.html.haml
 .pad-top
 	.comment-form
-		= simple_form_for @new_comment, remote: true do |f|
-			= f.input :body, input_html: {rows: '2'}, label: false, :placeholder => "Make a note about this application"
-			= f.input :title, label: false, placeholder: "I know this because ..."
-			= f.input :commentable_id, as: :hidden, value: @new_comment.commentable_id
-			= f.input :commentable_type, as: :hidden, value: @new_comment.commentable_type
-			= f.input :subject, collection: ["Interview Review", "Salary Review", "Company Review"]
-			= f.button :submit, "Add Comment", class: 'btn btn-primary'
+		=form_for @new_comment do |f|
+			= f.collection_select :commentable_id, Company.order(:name), :id, :name, include_blank: true
+			= f.text_area :body, :placeholder => "Make a note about this application"
+			= f.text_field :title, placeholder: "I know this because ..."
+			= f.select :subject, ["Interview Review", "Salary Review", "Company Review"]
+			= f.hidden_field :commentable_type, value: "Company"
+			= f.submit
+
+
+
+			
+
+/	
+/	
+/	= f.input :commentable_id, as: :hidden, value: 
+/	f.autocomplete :commentable_id
+/	= simple_form_for @new_comment do |f|
+/	
+/	= f.input :body, input_html: {rows: '2'}, label: false, :placeholder => "Make a note about this application"
+/	= f.input :title, label: false, placeholder: "I know this because ..."
+/	= f.input :commentable_type, as: :hidden, value: "Company"
+/	= f.input :subject, collection: ["Interview Review", "Salary Review", "Company Review"]
+
+/	= f.button :submit, "Add Comment", class: 'btn btn-primary'
+/			= f.input :commentable_id, url: autocomplete_company_name_comments_path, as: :autocomplete, label: false, placeholder: "Type name of Company", 
+			
+/			= f.autocomplete_field :commentable_id, autocomplete_company_name_comments_path, :element_id => "#id", :value => "#id"
