--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1048,3 +1048,22 @@ h3 {
 		}
 	
 }
+
+.light-blue-message{
+		background-color:#EBF8FC;
+		width:250px;
+	//	border:0px !important;
+		border-radius: 4px;
+		//background-color:$light-teal;
+		padding:10px;
+		margin-top:15px;
+		color:$text-grey;
+		line-height:16px;
+		font-size:12px;
+		h5{
+			color:#1580A3;
+		}
+		img {
+			max-width:100px;
+		}
+}
