fixed bsoc ad link

--- a/app/views/dashboards/dashboard.haml
+++ b/app/views/dashboards/dashboard.haml
@@ -15,7 +15,7 @@
 		- comment_company = comment.get_company_for_comment
 		-if counter == 5
 			.item
-				=link_to 'http://bit.ly/1hv6Fbw', :target => '_blank' do 
+				=link_to 'http://on.fb.me/1c3n7z9', :target => '_blank' do 
 					.light-blue-message
 						.center-alignment
 							=  image_tag('bsoc_logo.png')
