--- a/app/views/dashboards/dashboard.haml
+++ b/app/views/dashboards/dashboard.haml
@@ -19,8 +19,13 @@
 					.light-blue-message
 						.center-alignment
 							=  image_tag('bsoc_logo.png')
-							%h5 The UNSW Business Society in collaboration with the ASB Young Alumni is presenting a special event: Confessions of a Recent Graduate!
+							%h5 The UNSW Business Society with the ASB Young Alumni is presenting: Confessions of a Recent Graduate!
 							This is a great opportunity to learn about the Alumni community that you will be a part of when you graduate, and find out more about where the degrees of these recent graduates have taken them! 
+							%br
+							%br
+							%b October 17 6pm @ Deans Lounge ASB
+							%br
+							Click to find out more
 			
 			
 			
