--- a/app/views/staticpages/home.haml
+++ b/app/views/staticpages/home.haml
@@ -9,7 +9,7 @@
 					.center-alignment.home-logo
 						= link_to image_tag('white-logo.png'), root_path 
 						.home-page-text
-							Your infinite leg-up network.
+							Job advice cards, by students, to help students
 						.dashboard
 						.center-alignment
 							=link_to "Sign Up", new_user_registration_path, :class => "signup-button"
