--- a/app/views/staticpages/home.haml
+++ b/app/views/staticpages/home.haml
@@ -9,7 +9,7 @@
 					.center-alignment.home-logo
 						= link_to image_tag('white-logo.png'), root_path 
 						.home-page-text
-							=ab_test("signup_title", "Job advice cards, by students, to help students.", "Your infinite leg-up network.")
+							=ab_test("signup_title", "Job advice cards, by students, to help students.", "A treasure trove of student career advice inside.")
 						.dashboard
 						.center-alignment
 							=link_to "Sign Up", new_user_registration_path, :class => "signup-button"
