--- a/app/views/dashboards/dashboard.haml
+++ b/app/views/dashboards/dashboard.haml
@@ -10,7 +10,7 @@
 			.center-alignment
 				%h5 Welcome to DemPoints!
 				%br You can post interesting and useful points about companies & their intern/grad jobs here
-				=finished("signup_title")
+				-finished("signup_title")
 	- counter = 1		
 	- @comments.each do |comment|
 		- comment_company = comment.get_company_for_comment
