--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -6,7 +6,8 @@
 			= f.input :title, label: false, placeholder: "I know this because ..."
 			= f.input :commentable_id, as: :hidden, value: comment.commentable_id
 			= f.input :commentable_type, as: :hidden, value: comment.commentable_type
-			= f.input :subject, collection: ["Interview Review", "Salary Review", "Company Review"]
+			= f.collection_select :category_id, Category.order(:name).where("category = ?", "Review"), :id, :name
+
 			= f.button :submit, "Add Comment", class: 'btn btn-primary'
 
 		-if false	
@@ -15,3 +16,4 @@
 				= f.text_area :body
 				= f.hidden_field :commentable_id, value: comment.commentable_id
 				= f.hidden_field :commentable_type, value: comment.commentable_type
+/			= f.input :subject, collection: ["Interview Review", "Salary Review", "Company Review"]
