--- a/app/views/comments/edit.haml
+++ b/app/views/comments/edit.haml
@@ -4,6 +4,6 @@
 	= f.text_area :body, :placeholder => "Make a note about this application"
 	= f.text_field :title, placeholder: "I know this because ..."
 	= f.select :subject, ["Interview Review", "Salary Review", "Company Review"]
-	= f.collection_select :category_id, Category.order(:name).where("category = ?", "Review"), :id, :name
+	= f.collection_select :category_id, Category.order(:name).where("category = ?", "Review"), :id, :name, include_blank: true
 	= f.hidden_field :commentable_type, value: "Company"
 	= f.submit
