--- a/app/views/comments/index.haml
+++ b/app/views/comments/index.haml
@@ -10,7 +10,7 @@
 			| 
 			=comment.subject
 			|
-			=comment.category_id
+			=Category.find_by_id(comment.category_id).name
 			|
 			=link_to "Delete", comment_path(comment), method: :delete, remote: true, confirm: "Are you sure?", disable_with: "x"
 			|
